--- a/res/html/signin.html
+++ b/res/html/signin.html
@@ -6,13 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link
             rel="preload"
-            href="../fonts/zed-sans-extended.ttf"
+            href="/res/fonts/zed-sans-extended.ttf"
             as="font"
             type="font/ttf"
             crossorigin
         />
-        <link rel="stylesheet" href="../css/theme.css" />
-        <link rel="stylesheet" href="../css/signin.css" />
+        <link rel="stylesheet" href="/res/css/theme.css" />
+        <link rel="stylesheet" href="/res/css/signin.css" />
         <title>Login - WebSys</title>
     </head>
     <body>
@@ -24,7 +24,7 @@
                 <p class="h2" id="OS"></p>
                 <br />
                 <br />
-                <form action="../launch/launch.html">
+                <form method="POST" enctype="application/x-www-form-urlencoded" action="/auth">
                     <input
                         type="text"
                         name="username"
@@ -38,10 +38,10 @@
                     /><br />
                     <br />
                     <br />
-                    <button type="submit" name="submit">Login</button>
+                    <button type="submit" name="submit">Sign in</button>
                 </form>
             </div>
         </section>
     </body>
-    <script src="../js/script.js"></script>
+    <script src="/res/js/script.js"></script>
 </html>
